# Python-Package

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
src/welcome/: banner  welcome.py
src/welcome.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_welcome.py
