[welcome]
name = "welcome"
version = "0.0.2"
authors = [
    { name="Creeper751", email="" },
]
description = "A small example package"
readme = "README.md"

[welcome.urls]
"Homepage" = "https://github.com/Creeper751/Python-Package/"
"Bug Tracker" = "https://github.com/Creeper751/Python-Package/issues"
[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=welcome"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true