python_requires = ">=3.7"
[project]
name = "welcome"
version = "0.0.4"
authors = [
    { name="Creeper751", email="joshua.stoneham@gamil.com" },
]
description = "A small example package"
readme = "README.md"
classifiers = ['Programming Language :: Python :: 3', 'Programming Language :: Python :: 3 :: Only', 'Programming Language :: Python :: 3.7', 'Programming Language :: Python :: 3.8', 'Programming Language :: Python :: 3.9', 'Programming Language :: Python :: 3.10', 'Programming Language :: Python :: 3.11']

[project.urls]
"Homepage" = "https://github.com/Creeper751/Python-Package/"
"Bug Tracker" = "https://github.com/Creeper751/Python-Package/issues"
[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=welcome"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true