[metadata]
name = welcome
description = a simple welcome script
author = Creeper751
license = GNU
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    welcome
install_requires =

python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8==6.0.0
    tox==4.4.6
    pytest==7.2.2
    pytest-cov==4.0.0
    mypy==1.1.1

[options.package_data]
welcome = py.typed

[flake8]
max-line-length = 160